--- a/rebar.config
+++ b/rebar.config
@@ -6,10 +6,6 @@
 
 %% Dependencies
 {deps, [
-    % {misultin,   ".*", {git, "git://github.com/ostinelli/misultin",       {branch, "master"}}},
-    % {json,       ".*", {git, "git://github.com/davisp/eep0018",           {branch, "master"}}},
-    % {webmachine, ".*", {git, "git://github.com/basho/webmachine",         {branch, "master"}}},
-    % {riakc,      ".*", {git, "git://github.com/basho/riak-erlang-client", {branch, "master"}}}
-    
+       {erlsha2, ".*", {git, "git://github.com/vinoski/erlsha2.git", "HEAD"}}
 ]}.
 
