add/delete hosted zone implemented, requires some refactoring

--- a/rebar.config
+++ b/rebar.config
@@ -5,7 +5,9 @@
 
 
 %% Dependencies
-{deps, [
-       {erlsha2, ".*", {git, "git://github.com/vinoski/erlsha2.git", "HEAD"}}
+{deps, 
+ [
+  {ossp_uuid, ".*",
+   {git, "git://github.com/yrashk/erlang-ossp-uuid", "HEAD"}}
 ]}.
 
